--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "d3": "^7.8.5",
     "next": "^14.0.2-canary.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/topojson-client": "^3.1.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
